syntax = "proto3";

option csharp_namespace = "RoutesService";

package routes;

import "google/protobuf/empty.proto";

message RutaDto {
  int32 rutaId = 1;
  string codigo = 2;
  string nombre = 3;
  int32 origenId = 4;
  int32 destinoId = 5;
  double distancia = 6;
  double tiempoEstimado = 7;
  string tipoTerreno = 8;
  string descripcion = 9;
  bool estaActiva = 10;
}

message RutaCreateRequest {
  string codigo = 1;
  string nombre = 2;
  int32 origenId = 3;
  int32 destinoId = 4;
  double distancia = 5;
  double tiempoEstimado = 6;
  string tipoTerreno = 7;
  string descripcion = 8;
  bool estaActiva = 9;
}

message RutaIdRequest { int32 rutaId = 1; }

message RutaUpdateRequest {
  int32 rutaId = 1;
  optional string codigo = 2;
  optional string nombre = 3;
  optional int32 origenId = 4;
  optional int32 destinoId = 5;
  optional double distancia = 6;
  optional double tiempoEstimado = 7;
  optional string tipoTerreno = 8;
  optional string descripcion = 9;
  optional bool estaActiva = 10;
}

message UbicacionDto {
  int32 ubicacionId = 1;
  string nombre = 2;
  string direccion = 3;
  string ciudad = 4;
  string estado = 5;
  string pais = 6;
  double latitud = 7;
  double longitud = 8;
  string tipo = 9;
}

message UbicacionCreateRequest {
  string nombre = 1;
  string direccion = 2;
  string ciudad = 3;
  string estado = 4;
  string pais = 5;
  double latitud = 6;
  double longitud = 7;
  string tipo = 8;
}

message UbicacionIdRequest { int32 ubicacionId = 1; }

message UbicacionUpdateRequest {
  int32 ubicacionId = 1;
  optional string nombre = 2;
  optional string direccion = 3;
  optional string ciudad = 4;
  optional string estado = 5;
  optional string pais = 6;
  optional double latitud = 7;
  optional double longitud = 8;
  optional string tipo = 9;
}

message SegmentoDto {
  int32 segmentoId = 1;
  int32 rutaId = 2;
  int32 numeroSecuencia = 3;
  int32 ubicacionInicioId = 4;
  int32 ubicacionFinId = 5;
  double distanciaSegmento = 6;
  double tiempoSegmento = 7;
  string tipoTerreno = 8;
  string descripcion = 9;
}

message SegmentoCreateRequest {
  int32 rutaId = 1;
  int32 numeroSecuencia = 2;
  int32 ubicacionInicioId = 3;
  int32 ubicacionFinId = 4;
  double distanciaSegmento = 5;
  double tiempoSegmento = 6;
  string tipoTerreno = 7;
  string descripcion = 8;
}

message SegmentoIdRequest { int32 segmentoId = 1; }

message SegmentoUpdateRequest {
  int32 segmentoId = 1;
  optional int32 rutaId = 2;
  optional int32 numeroSecuencia = 3;
  optional int32 ubicacionInicioId = 4;
  optional int32 ubicacionFinId = 5;
  optional double distanciaSegmento = 6;
  optional double tiempoSegmento = 7;
  optional string tipoTerreno = 8;
  optional string descripcion = 9;
}

message ListaRutas { repeated RutaDto rutas = 1; }
message ListaUbicaciones { repeated UbicacionDto ubicaciones = 1; }
message ListaSegmentos { repeated SegmentoDto segmentos = 1; }

service RouteService {
  rpc CrearRuta (RutaCreateRequest) returns (RutaDto);
  rpc ObtenerRutaPorId (RutaIdRequest) returns (RutaDto);
  rpc ListarRutas (google.protobuf.Empty) returns (ListaRutas);
  rpc EditarRuta (RutaUpdateRequest) returns (RutaDto);
  rpc EliminarRuta (RutaIdRequest) returns (google.protobuf.Empty);

  rpc CrearUbicacion (UbicacionCreateRequest) returns (UbicacionDto);
  rpc ObtenerUbicacionPorId (UbicacionIdRequest) returns (UbicacionDto);
  rpc ListarUbicaciones (google.protobuf.Empty) returns (ListaUbicaciones);
  rpc EditarUbicacion (UbicacionUpdateRequest) returns (UbicacionDto);
  rpc EliminarUbicacion (UbicacionIdRequest) returns (google.protobuf.Empty);

  rpc CrearSegmento (SegmentoCreateRequest) returns (SegmentoDto);
  rpc ObtenerSegmentoPorId (SegmentoIdRequest) returns (SegmentoDto);
  rpc ListarSegmentos (google.protobuf.Empty) returns (ListaSegmentos);
  rpc EditarSegmento (SegmentoUpdateRequest) returns (SegmentoDto);
  rpc EliminarSegmento (SegmentoIdRequest) returns (google.protobuf.Empty);
}
